--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<p> {"uid_black_list":[]}
+<!DOCTYPE html>
+<html>
+<head>
+<title>Page Title</title>
+</head>
+<body>
+
+<p>{"uid_black_list":[]}</p>
+
+</body>
+</html>
